# FlightPriceTracker

./: .gitignore  README.md
trips/: .env  celery_app.py  docker-compose.yml  main.py  pyproject.toml
trips/core/: config.py  utils.py
trips/db/: database.py
trips/db/models/: price.py  trip.py  trips.py
trips/routers/: trips.py
trips/schemas/: trips.py
trips/services/: aviasales_api.py  test.py
user/: .env  docker-compose.yml  main.py  pyproject.toml
user/core/: config.py  security.py
user/db/: database.py
user/db/models/: user.py
user/repositories/: users.py
user/routers/: auth.py
user/schemas/: auth.py
