[project]
name = "trips"
version = "0.1.0"
description = ""
authors = [
    {name = "DimaKrylov",email = "tumbo4kadima@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "trips", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
