[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["DimaKrylov <tumbo4kadima@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
beanie = "^1.29.0"
pydantic = "^2.11.2"
pydantic-settings = "^2.8.1"
motor = "^3.7.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
psycopg2 = "^2.9.10"
passlib = "^1.7.4"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
